Expressions now work

--- a/Spool.Test/Spool.Test.csproj
+++ b/Spool.Test/Spool.Test.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Spool\Spool.csproj" />
+    <ProjectReference Include="..\Lexico\Lexico.Test\Lexico.Test.csproj" />
   </ItemGroup>
 
 </Project>
